Fix dark mode font color

--- a/css/main.scss
+++ b/css/main.scss
@@ -833,6 +833,7 @@ pre {
 // Dark Mode
 .dark {
     background-color: #0e0e0e;
+    color: #ffffff;
 }
 
 .dark > .sidebar-title, .dark > .selected {
